syntax = "proto3";

package pb;
option go_package = "./";


message Item {
    string key = 1;
    string value = 2;
}

message PutRequest {
    string key = 1;
    string value = 2;
}

message GetRequest {
    string key = 1;
}

message DeleteRequest {
    string key = 1;
}

enum DeletedStatus {
    DELETED = 0;
    KEY_NOT_FOUND = 1;
}

message DeleteResponse {
    DeletedStatus status = 1;
}

service KVStorageService {
    rpc Put(PutRequest) returns (Item) {}
    rpc Get(GetRequest) returns (Item) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}